--- a/design.css
+++ b/design.css
@@ -17,8 +17,11 @@
 }
 
 .map {
-  height: 400px;
-  width: 50%;
+  height: 600px;
+  width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
  }
 
 body{
