--- a/design.css
+++ b/design.css
@@ -34,6 +34,9 @@ body{
     padding-bottom: 12px;
     text-align: center;
     background: #dddddd;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 table.center{
