--- a/design.css
+++ b/design.css
@@ -1,6 +1,5 @@
 .container-fluid {
-    height: 112px;
-    border: 1px;
+    height: 100px;
     background: #898a8c;
 }
 
@@ -25,6 +24,10 @@ html {
     height: 100%;
 }
 
+.right {
+    float: right;
+}
+
 .standorte {
     padding-top: 12px;
     padding-bottom: 12px;
@@ -35,9 +38,78 @@ html {
     margin-right: auto;
 }
 
+@media only screen and (max-width: 480px) {
+
+    .standorte {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: center;
+        background: #dddddd;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: smaller;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 649px) {
+
+    .standorte {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: center;
+        background: #dddddd;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: small;
+    }
+}
+
+@media only screen and (min-width: 650px) and (max-width: 1024px) {
+
+    .standorte {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: center;
+        background: #dddddd;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: medium;
+    }
+}
+
+
 th {
     text-align: center;
     font-size: large;
+}
+
+@media only screen and (max-width: 480px) {
+
+    th {
+        text-align: center;
+        font-size: smaller;
+    }
+
+}
+
+@media only screen and (min-width: 481px) and (max-width: 649px) {
+
+    th {
+        text-align: center;
+        font-size: small;
+    }
+
+}
+
+@media only screen and (min-width: 650px) and (max-width: 1024px) {
+
+    th {
+        text-align: center;
+        font-size: medium;
+    }
 
 }
 
@@ -50,10 +122,11 @@ table.center{
     height: 100%;
     padding: 0px;
 }
-.navbar-brand>img {
-  height: 100%;
-  padding: 15px;
-  width: auto;
+
+.navbar-brand > img {
+    max-height: 100%;
+    padding: 15px;
+    width: auto;
 }
 
 .test {
