--- a/design.css
+++ b/design.css
@@ -49,7 +49,7 @@ html {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        font-size: smaller;
+        font-size: 9px;
     }
 }
 
@@ -63,7 +63,7 @@ html {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        font-size: small;
+        font-size: 11px;
     }
 }
 
@@ -77,7 +77,7 @@ html {
         width: 90%;
         margin-left: auto;
         margin-right: auto;
-        font-size: medium;
+        font-size: 13px;
     }
 }
 
@@ -91,7 +91,7 @@ th {
 
     th {
         text-align: center;
-        font-size: smaller;
+        font-size: 11px;
     }
 
 }
@@ -100,7 +100,7 @@ th {
 
     th {
         text-align: center;
-        font-size: small;
+        font-size: 13px;
     }
 
 }
@@ -109,7 +109,7 @@ th {
 
     th {
         text-align: center;
-        font-size: medium;
+        font-size: 15px;
     }
 
 }
